style.css
html {
    background-color: #bbbbbb;
    padding: 0px;
    scroll-behavior: smooth;
}

/* Language Toggle Logic */
body.lang-en .lang-zh { display: none !important; }
body.lang-zh .lang-en { display: none !important; }

/* Language Toggle Button Styles */
.lang-toggle {
    position: absolute;
    top: 20pt;
    left: 20pt;
    background-color: #2196f3;
    color: white;
    border: none;
    border-radius: 8pt;
    padding: 8pt 16pt;
    font-family: 'Montserrat', sans-serif;
    font-size: 14pt;
    font-weight: 700;
    cursor: pointer;
    z-index: 1000;
    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
    transition: background-color 0.2s, transform 0.2s;
}
.lang-toggle:hover {
    background-color: #1976d2;
    transform: translateY(-2px);
}

body {
    width: 80%;
    min-height: calc(100vh - 4em);
    margin: 0 auto;
    padding: 2em;
    background-color: #dddddd;
    border-color: #eeeeee;
    border-left-style: solid;
    border-right-style: solid;
    border-width: 20px;
}
p {
    color: #444444;
    font-family: 'Roboto', sans-serif;
    font-size: 18.5pt;
    line-height: 1.15;
    margin: 4pt;
}

p.value {
    margin-top: 22px;
    margin-bottom: 22px;
    text-indent: -16pt;
    margin-left: 20pt;
    font-size: 24pt;
    line-height: 2.11666656px;
    letter-spacing: 0.03em;
    font-family: 'Montserrat';
}

p.axis_name {
    margin-top: 50px;
    color: #333333;
    font-size: 19pt;
    font-family: 'Montserrat';
}
p.question {
    margin: 16pt auto;
    color: #333333;
    font-family: 'Montserrat', sans-serif;
    font-weight: normal;
    width: 70%;
    min-width: 500pt;
    min-height: 144pt;
    background-color: #eeeeee;
    padding: 16pt;
    border-radius: 16pt;
    font-size: 36pt;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;

}
h1 {
    color: #222222;
    font-family: 'Montserrat', sans-serif;
    font-size: 72pt;
    text-align: center;
    line-height: 72pt;
    margin-top: 0pt;
    margin-bottom: 0pt;
}
h2 {
    color: #333333;
    font-family: 'Montserrat', sans-serif;
    font-size: 34pt;
    line-height: 36pt;
    margin-top: 12pt;
    margin-bottom: 10pt;
}
li {
    font-size: 16pt;
    text-indent: 16pt;
}
a {
    font-family: inherit;
}
div.center {
    background-color: #eeeeee;
    font-family: 'Montserrat', sans-serif;
    border-radius: 8pt;
    padding: 6pt;
    color: white;
    width: 50%;
    min-width: 488pt;
    text-align: center;
    text-decoration: none;
    display: block;
    font-size: 24pt;
    margin: auto;
}
img.quadcolumn {
    width: 23.75%;
    transition: transform .3s;
}
img.quadcolumn:hover {
    transform: scale(1.05);
  }
div.quadcolumn {
    width: 23.75%;
}
div.axis_name {
    color: #333333;
    font-size: 19pt;
    font-family: 'Montserrat';
    display: inline-block;
    padding-bottom: 8.65pt;
}
.spacer {
    display: flex;
}
.spacer > div{
    margin-top: 10px;
    display: inline-block;
    *display: inline; /* For IE7 */
    text-align: center;
}
.button {
    background-color: #2196f3;
    font-family: 'Montserrat', sans-serif;
    border: none;
    border-radius: 8pt;
    color: white;
    padding: 8pt;
    width: 50%;
    min-width: 500pt;
    text-align: center;
    text-decoration: none;
    display: block;
    font-size: 24pt;
    margin: -2px auto;
    cursor: pointer;
}
.button:hover, .button:focus { background: #1687e0; }
.stronglyAgree { background: #1b5e20; }
.stronglyAgree:hover, .stronglyAgree:focus { background: #154a19; }
.agree { background: #4caf50; }
.agree:hover, .agree:focus { background: #29942e; }
.neutral { background: #949494; }
.neutral:hover, .neutral:focus { background: #656565; }
.disagree { background: #f44336; }
.disagree:hover, .disagree:focus { background: #d6271a; }
.stronglyDisagree { background: #b71c1c; }
.stronglyDisagree:hover, .stronglyDisagree:focus { background: #a00e0e; }

.small_button, .small_button_off {
    background-color: #333;
    font-family: 'Montserrat', sans-serif;
    border: none;
    border-radius: 8pt;
    color: white;
    padding: 8pt;
    width: 10%;
    min-width: 100pt;
    text-align: center;
    text-decoration: none;
    display: block;
    font-size: 18pt;
    margin: -2px auto;
    cursor: pointer;
}

.small_button:hover, .small_button:focus {
    background: #222;
}

.small_button_off {
    background-color: #ddd;
    color: #888;
    border: 2px solid #888;
    cursor: not-allowed;
    margin: -4px auto;
}
.arrow {
    width: 60%;
    height: auto;
}
div.explanation_blurb_left {
    vertical-align: top;
    width: 37%;
    margin-left: 1%;
    margin-right: 1%;
}
div.explanation_blurb_right {
    vertical-align: top;
    width: 37%;
    margin-left: 1%;
    margin-right: 1%;
}
div.explanation_axis {
    width: 20.9%;
    vertical-align: top;
}
div.axis {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}
div.bar {
    height: 56pt;
    line-height: 56pt;
    padding: 8pt;
    margin-top: 4pt;
    margin-bottom: 4pt;
    border-width: 4px;
    border-right-width: 1px;
    border-top-style: solid;
    border-bottom-style: solid;
    border-color: #222222;
    background-color: #eeeeee;
    display: block;
    width: 50%;
}
div.text-wrapper {
    font-family: 'Montserrat', sans-serif;
    font-size: 36pt;
    line-height: 56pt;
    color: #222222;
    display: inline-block;
}
div.equality {
    background-color: #f44336;
    text-align: left;
    border-right-style: solid;
}
div.wealth {
    background-color: #00897b;
    text-align: right;
    border-left-style: solid;
}
div.liberty {
    background-color: #ffeb3b;
    text-align: left;
    border-right-style: solid;
}
div.authority {
    background-color: #3f51b5;
    text-align: right;
    border-left-style: solid;
}
div.peace {
    background-color: #03a9f4;
    text-align: right;
    border-left-style: solid;
}
/* ... */

